--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -60,6 +60,12 @@
         </div>
       </div>
 
+
+
+<div *ngIf="spin" id="container">
+  <div class="loadingbar"></div>
+</div>
+
 <!--
 <div class="col-lg-12 col-xs-12" style="margin-right:20px;text-align:center"
     *ngIf=test [routerLinkActive]="['active']" 
