--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -3,6 +3,8 @@
     aria-valuemin="0" aria-valuemax="100" [style]=load>
     </div>
   </div>-->
+
+
   <div class="container card">
   <h2 class="page-header">Login</h2>
   <form (submit)="onLoginSubmit()">
@@ -51,10 +53,7 @@
     </div>
   </div>
   
-
-<div *ngIf=spin class="spinner">
-    <div class="spinner_1"></div>
-    <div class="spinner_2"></div>
-    <div class="spinner_3"></div>
-    <div class="spinner_4"></div>
-</div>
+  <div *ngIf="spin" id="container">
+      <div class="loadingbar"></div>
+    </div>
+ 
