--- a/angular-src/src/app/components/navbar/navbar.component.css
+++ b/angular-src/src/app/components/navbar/navbar.component.css
@@ -1,15 +1,13 @@
+
 .navbar-toggle {
   border:none;
+  color:black;
+  font-size:20px;
 }
+
     .navbar {
         background:rgba(23, 146, 186, 0.50);
-        border: none;/*
-        width: 100%;
-        color:black;
-        position:fixed;
-        top:0;
-        left:0;
-        z-index:1;*/
+        border: none;
       }
       
       .navbar-header > a {
@@ -51,6 +49,8 @@
       color:white;
       background:none;
     }
+
+    
 
 
       /*
