--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -75,11 +75,8 @@
 
 
 
-<div *ngIf=spin class="spinner">
-    <div class="spinner_1"></div>
-    <div class="spinner_2"></div>
-    <div class="spinner_3"></div>
-    <div class="spinner_4"></div>
+<div *ngIf="spin" id="container">
+  <div class="loadingbar"></div>
 </div>
 <!--
 <div *ngIf="avatar">
