--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -37,10 +37,7 @@
     </form>
 </div>
 
-<div *ngIf=spin class="spinner">
-    <div class="spinner_1"></div>
-    <div class="spinner_2"></div>
-    <div class="spinner_3"></div>
-    <div class="spinner_4"></div>
-  </div>
+<div *ngIf="spin" id="container">
+  <div class="loadingbar"></div>
+</div>
   
