--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -1,5 +1,168 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: Century Gothic, sans-serif;
+}
 
+#container {
+  width: 100%;
+  position: absolute;
+  top:7vh;
+  left:0;/*
+  margin: calc(50vh - 5px) auto;*/ /*vertical center for better showcase*/
+}
+
+.loadingbar {
+    display: block;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ccc;
+    overflow: hidden;
+    position: relative;
+}
+
+.loadingbar:after, .loadingbar:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 0%;
+    border-radius: 5px;
+    background: linear-gradient(#F9AF26,#1792BA);
+}
+
+.loadingbar:before {
+    animation: loading1 5s linear 0s infinite;
+    z-index: 10;
+}
+
+.loadingbar:after {
+    animation: loading2 5s linear 2.5s infinite;
+    z-index: 20;
+}
+
+@keyframes loading1 {
+  0%{
+    width: 10%;
+    margin-left: -10%;
+  }
+  50%,100%{
+    width: 50%;
+    margin-left: 100%;
+  }
+}
+
+@keyframes loading2 {
+  0%{
+    width: 50%;
+    margin-left: -50%;
+  }
+  50%,100%{
+    width: 10%;
+    margin-left: 100%;
+  }
+}
+
+@keyframes desktop {
+    0% {
+    }
+    100% {
+    }
+}
+
+@keyframes cog1 {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        color:skyblue;
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes cog2 {
+    0% {
+        transform: rotate(0deg);
+        color:skyblue;
+    }
+    100% {
+        transform: rotate(360deg);
+        color:black;
+    }
+}
+
+@keyframes cog3 {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+
+}
+
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+      background-color: white;
+  }
+  
+  .loading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+  }
+  .loading div {
+      display: inline-block;
+      width: 10px;
+      height: 50px;
+      border-radius: 4px;
+      animation: loading 1.5s ease-in-out infinite;
+      background-color: #345f73;
+  }
+  .loading div:nth-child(1) {
+      animation-delay: .24s;
+  }
+  .loading div:nth-child(2) {
+      animation-delay: .12s;
+  }
+  .loading div:nth-child(4) {
+      animation-delay: .12s;
+  }
+  .loading div:nth-child(5) {
+      animation-delay: .24s;
+  }
+  
+  @keyframes loading {
+      0% {
+      transform: scale(1);
+      background-color: #345f73;
+      }
+      25% {
+      transform: scale(1, 2.1);
+      background-color: #1792BA;
+      }
+      50% {
+      transform: scale(1);
+      background-color: #345f73;
+      }
+  }
+
+@media only screen and (max-width: 500px) { 
+    #container {
+        width: 100%;
+        position: absolute;
+        top:11vh;
+        left:0;/*
+        margin: calc(50vh - 5px) auto;*/ /*vertical center for better showcase*/
+    }      
+}
 /*
 button a {
     text-decoration:none;
@@ -58,7 +221,7 @@ div a {
 .nested > div {
     border: 0.2em solid black;
     background:grey;
-}*/
+}
 
 .hide {
     top:0px;
@@ -203,7 +366,7 @@ div a {
     left:0px;
     position: absolute;
     border:4px solid #4CA160 transparent;
-}*/
+}
 
 
 .spinner_3 {
@@ -216,7 +379,7 @@ div a {
     position: absolute;
     border:4px solid transparent;
     border-color: #005EFF;
-}
+}*/
 
 /*
 .spinner_4:after,.spinner_4:before {
@@ -241,7 +404,7 @@ div a {
     animation:spinny_3 2s linear infinite;
 }
 */
-
+/*
 @keyframes spinny {
     0% {
         transform:rotate(0deg) scale(1);
@@ -277,3 +440,5 @@ div a {
         transform:opacity(0) scale(1);
     }
 }
+
+*/
