--- a/angular-src/src/app/components/result/result.component.html
+++ b/angular-src/src/app/components/result/result.component.html
@@ -3,7 +3,7 @@
       <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" href="#{{i}}">{{user.name}}</a>
+              <a data-toggle="collapse" href="#{{i}}">{{user.name}}<i class="fa fa-angle-double-down"></i></a>
             </h4>
           </div>
           <div id="{{i}}" class="panel-collapse collapse">
