--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
       <div class="panel {{ticket.priority}}">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" href="#{{i}}">{{ticket.problem}}<i class="fa fa-arrow-down"></i></a>
+              <a data-toggle="collapse" href="#{{i}}">{{ticket.problem}}<i class="fa fa-angle-double-down"></i></a>
               <i class="fa fa-trash" (click)="deleteTicket(ticket.problem)" style="float:right;margin-right:5px;color:red"></i>
             </h4>
           </div>
