--- a/angular-src/src/app/components/report/report.component.html
+++ b/angular-src/src/app/components/report/report.component.html
@@ -3,7 +3,7 @@
       <div class="panel {{ticket.priority}}">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" href="#{{i}}">{{ticket.problem}}</a>
+              <a data-toggle="collapse" href="#{{i}}">{{ticket.problem}}<i class="fa fa-angle-double-down"></i></a>
               <button style="float:right;margin-right:10px;" class="btn btn-default"><i class="fa fa-trash" (click)="deleteTicket(ticket.problem,ticket.email)" style="float:right;margin-right:10px;color:red"></i></button>
               <button style="float:right;margin-right:10px;" class="btn btn-default"><i class="fa fa-close" (click)="uncheck(ticket.problem,ticket.email)" style="float:right;margin-right:10px;color:orange;"></i></button>
               <button style="float:right;margin-right:10px;" class="btn btn-default"><i class="fa fa-check" (click)="check(ticket.problem,ticket.email)" style="float:right;margin-right:10px;color:green;"></i></button>
