--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -20,7 +20,7 @@
       <div class="form-group">
         <label>Email<sup>*</sup></label>
         <input type="text" placeholder="Enter your work email" class="form-control" [(ngModel)]="email" name="email">
-      </div>
+      </div><!--
       <div class="form-group">
         <label>Password<sup>*</sup></label>
         <input type="password" placeholder="Enter a strong password" class="form-control" [(ngModel)]="password" name="password">
@@ -32,7 +32,7 @@
       <div class="form-group">
         <label>Answer<sup>*</sup></label>
         <input type="text" placeholder="Definite answer" class="form-control" [(ngModel)]="answer" name="answer">
-      </div>
+      </div>-->
       <input type="submit" class="registerbtn" value="Submit">
     </form>
 </div>
